<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="40dp"
        android:paddingTop="50dp"
        android:paddingBottom="100dp"
        android:paddingRight="40dp"
        android:isScrollContainer="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:fontFamily="@font/roboto"
            android:textSize="20sp"
            android:enabled="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="" />
        <EditText
            android:id="@+id/etname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/hint_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:fontFamily="@font/roboto"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etlastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/hint_lastname"
            android:textSize="20sp"
            android:fontFamily="@font/roboto"
            android:textColorHint="@color/black"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/ethours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:textSize="20sp"
            android:fontFamily="@font/roboto"
            android:hint="@string/hint_hour"
            android:textColorHint="@color/black"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tv_carg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:fontFamily="@font/roboto"
            android:textSize="20sp"
            android:enabled="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/tv_cargo" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rd1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/black"
                android:checked="true"
                android:text="@string/rb_cargo1" />

            <RadioButton
                android:id="@+id/rd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto"
                android:text="@string/rb_cargo2" />

            <RadioButton
                android:id="@+id/rd3"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto"
                android:layout_height="wrap_content"
                android:text="@string/rb_cargo3" />
            <RadioButton
                android:id="@+id/rd4"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto"
                android:layout_height="wrap_content"
                android:text="@string/rb_cargo4" />
        </RadioGroup>

        <Button
            android:id="@+id/btnemploy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:onClick="addEmployee"
            android:text="@string/btn_name6"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>