<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:paddingTop="100dp"
    android:paddingBottom="100dp"
    android:paddingRight="40dp"
    android:isScrollContainer="true"
    android:layout_centerVertical="true"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/eta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hint_a"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:textAlignment="center"
        android:fontFamily="@font/roboto"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hint_b"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"
        android:textColorHint="@color/black"
        android:gravity="center_horizontal"
        android:inputType="numberSigned|numberDecimal"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/etc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"
        android:hint="@string/hint_c"
        android:textColorHint="@color/black"
        android:gravity="center_horizontal"
        android:inputType="numberSigned|numberDecimal"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btncal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:backgroundTint="@color/teal_700"
        android:gravity="center"
        android:onClick="formulate"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/btn_name4"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_x1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="" />
    <TextView
        android:id="@+id/tv_x2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="" />


</LinearLayout>