<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingRight="40dp"
    android:isScrollContainer="true"
    android:layout_centerVertical="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_ind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/inst" />
    <EditText
        android:id="@+id/etsecuence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hint_secuence"
        android:importantForAutofill="no"
        android:inputType="number"
        android:digits="1234,"
        android:textAlignment="center"
        android:fontFamily="@font/roboto"
        android:textColorHint="@color/black"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btnvotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:onClick="showVotes"
        android:text="@string/btn_name5"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_cand1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="" />
    <TextView
        android:id="@+id/tv_cand2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="" />
    <TextView
        android:id="@+id/tv_cand3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="" />
    <TextView
        android:id="@+id/tv_cand4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="" />
    <TextView
        android:id="@+id/tv_cand5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="" />
</LinearLayout>